--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "erotikamarket-feed",
+  "name": "erotikamarket-new",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "fast-xml-parser": "^4.3.1"
   }
 }
